--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -1,5 +1,42 @@
+@font-face{
+    src: url("../fonts/Montserrat-Regular.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Montserrat-Black.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Montserrat-Bold.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Montserrat-SemiBold.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Montserrat-ExtraLight.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Montserrat-Light.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Montserrat-Medium.ttf");
+}
+
+@font-face{
+    src: url("../fonts/Hustle-Hardcore.ttf");
+}
+
+@font-face{
+    src:url("../fonts/JosefinSans-Regular.ttf");
+}
+
 #maintitle {
-    -fx-font-family: "Montserrat Black";
+    /*-fx-font-family: "Montserrat Black";*/
+    -fx-font-family: "Josefin Sans SemiBold";
     -fx-font-size: 9em;
     /*-fx-effect: dropshadow(gaussian, black, 30, 0.0, 2, 2)*/
 }
