--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -34,6 +34,10 @@
     src:url("../fonts/JosefinSans-Regular.ttf");
 }
 
+@font-face{
+    src:url("../fonts/JosefinSans-SemiBold.ttf");
+}
+
 #maintitle {
     /*-fx-font-family: "Montserrat Black";*/
     -fx-font-family: "Josefin Sans SemiBold";
